fix fly configure link
[#98611576]

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -31,7 +31,7 @@
             <li><a href="{{url "DownloadCLI" "windows" "amd64"}}"><i class="fa fa-windows"></i></a></li>
             <li><a href="{{url "DownloadCLI" "linux" "amd64"}}"><i class="fa fa-linux"></i></a></li>
           </ul>
-        <h3>then, use `<a class="ansi-blue-fg" target="_blank" href="http://concourse.ci/fly-cli.html#%28part._fly-configure%29">fly configure</a>` to setup your new pipeline</h3>
+        <h3>then, use `<a class="ansi-blue-fg" target="_blank" href="http://concourse.ci/fly-cli.html#fly-configure">fly configure</a>` to setup your new pipeline</h3>
 
     </div>
   </body>
