add pipeline name to page title
[#97472150]

Signed-off-by: Chris Walter <cwalter@pivotal.io>

--- a/web/templates/pipeline.html
+++ b/web/templates/pipeline.html
@@ -1,4 +1,4 @@
-{{define "title"}}Concourse{{end}}
+{{define "title"}}{{.PipelineName}} - Concourse{{end}}
 
 {{define "body"}}
 <div id="pipeline">
