--- a/web/assets/css/colors.less
+++ b/web/assets/css/colors.less
@@ -89,13 +89,13 @@ span.error { color: @base08; }
 
 svg .job.node.started div,
 .legend dt.started {
-  background-color: transparent;
+  background: @base0A;
   -webkit-animation: started-circles 1s linear infinite;
 }
 
 .generate-keyframes(@frame: 0%, @color) when (@frame =< 100%) {
   @{frame} {
-    background-image: repeating-radial-gradient(
+    background: repeating-radial-gradient(
       circle,
       @color unit(@frame / 5, px),
       @color unit(@frame / 5, px) + 5px,
@@ -121,7 +121,7 @@ svg .job.node.started div,
 
 svg .job.node.pending-start div,
 .legend dt.pending-start {
-  background-color: transparent;
+  background: @base07;
   -webkit-animation: pending-circles 1s linear infinite;
 }
 
