woops, fix up ripple colors

--- a/web/assets/css/colors.less
+++ b/web/assets/css/colors.less
@@ -94,15 +94,15 @@ svg .job.node.started div,
 
 @keyframes started-ripples {
   0% {
-    box-shadow: 0 0 0 -2px @base01, 0 0 0 0px @base0A, 0 0 0 2px @base01, 0 0 0 4px #f4bf75;
+    box-shadow: 0 0 0 -2px @base01, 0 0 0 0px @base0A, 0 0 0 2px @base01, 0 0 0 4px @base0A;
   }
 
   50% {
-    box-shadow: 0 0 0 0px @base01, 0 0 0 2px @base0A, 0 0 0 4px #202020, 0 0 0 6px #f4bf75;
+    box-shadow: 0 0 0 0px @base01, 0 0 0 2px @base0A, 0 0 0 4px @base01, 0 0 0 6px @base0A;
   }
 
   100% {
-    box-shadow: 0 0 0 2px @base01, 0 0 0 4px @base0A, 0 0 0 6px #202020, 0 0 0 8px transparent;
+    box-shadow: 0 0 0 2px @base01, 0 0 0 4px @base0A, 0 0 0 6px @base01, 0 0 0 8px transparent;
   }
 }
 
@@ -119,15 +119,15 @@ svg .job.node.pending-start div,
 
 @keyframes pending-ripples {
   0% {
-    box-shadow: 0 0 0 -2px @base01, 0 0 0 0px @base07, 0 0 0 2px @base01, 0 0 0 4px #f4bf75;
+    box-shadow: 0 0 0 -2px @base01, 0 0 0 0px @base07, 0 0 0 2px @base01, 0 0 0 4px @base07;
   }
 
   50% {
-    box-shadow: 0 0 0 0px @base01, 0 0 0 2px @base07, 0 0 0 4px #202020, 0 0 0 6px #f4bf75;
+    box-shadow: 0 0 0 0px @base01, 0 0 0 2px @base07, 0 0 0 4px @base01, 0 0 0 6px @base07;
   }
 
   100% {
-    box-shadow: 0 0 0 2px @base01, 0 0 0 4px @base07, 0 0 0 6px #202020, 0 0 0 8px transparent;
+    box-shadow: 0 0 0 2px @base01, 0 0 0 4px @base07, 0 0 0 6px @base01, 0 0 0 8px transparent;
   }
 }
 
