fix ripple animation in firefox
foreignObject clips its content at its own borders, so add padding so
the animation can fit

--- a/web/assets/css/colors.less
+++ b/web/assets/css/colors.less
@@ -86,7 +86,7 @@ span.error { color: @base08; }
 .started { background: @base0A; }
 .legend dt.started rect { stroke: @base0A; }
 
-svg .job.node.started div,
+svg .job.node.started .animation,
 .legend dt.started {
   border-radius: 1px;
   animation: started-ripples 1s linear infinite;
@@ -111,7 +111,7 @@ svg .job.node.started div,
 .pending-start{ background: @base07; }
 .legend dt.pending-start rect { stroke: @base07; }
 
-svg .job.node.pending-start div,
+svg .job.node.pending-start .animation,
 .legend dt.pending-start {
   border-radius: 1px;
   animation: pending-ripples 1s linear infinite;
