--- a/web/assets/css/colors.less
+++ b/web/assets/css/colors.less
@@ -47,7 +47,22 @@
 
 svg .job.node.pending-start .animation {
   border-radius: 1px;
+  -webkit-animation: pending-ripples 1s linear infinite;
   animation: pending-ripples 1s linear infinite;
+}
+
+@-webkit-keyframes pending-ripples {
+  0% {
+    box-shadow: 0 0 0 -2px @base01, 0 0 0 0px @base04, 0 0 0 2px @base01, 0 0 0 4px @base04;
+  }
+
+  50% {
+    box-shadow: 0 0 0 0px @base01, 0 0 0 2px @base04, 0 0 0 4px @base01, 0 0 0 6px @base04;
+  }
+
+  100% {
+    box-shadow: 0 0 0 2px @base01, 0 0 0 4px @base04, 0 0 0 6px @base01, 0 0 0 8px transparent;
+  }
 }
 
 @keyframes pending-ripples {
@@ -109,7 +124,22 @@ span.error { color: @base08; }
 svg .job.node.started .animation,
 .legend dt.started {
   border-radius: 1px;
+  -webkit-animation: started-ripples 1s linear infinite;
   animation: started-ripples 1s linear infinite;
+}
+
+@-webkit-keyframes started-ripples {
+  0% {
+    box-shadow: 0 0 0 -2px @base01, 0 0 0 0px @base0A, 0 0 0 2px @base01, 0 0 0 4px @base0A;
+  }
+
+  50% {
+    box-shadow: 0 0 0 0px @base01, 0 0 0 2px @base0A, 0 0 0 4px @base01, 0 0 0 6px @base0A;
+  }
+
+  100% {
+    box-shadow: 0 0 0 2px @base01, 0 0 0 4px @base0A, 0 0 0 6px @base01, 0 0 0 8px transparent;
+  }
 }
 
 @keyframes started-ripples {
