smoothen ripples animation

--- a/web/assets/css/colors.less
+++ b/web/assets/css/colors.less
@@ -57,7 +57,7 @@ svg .job.node.pending-start .animation {
   }
 
   50% {
-    box-shadow: 0 0 0 0px @base01, 0 0 0 2px @base04, 0 0 0 4px @base01, 0 0 0 6px @base04;
+    box-shadow: 0 0 0 0px @base01, 0 0 0 2px @base04, 0 0 0 4px @base01, 0 0 0 6px fade(@base04, 50%);
   }
 
   100% {
@@ -71,7 +71,7 @@ svg .job.node.pending-start .animation {
   }
 
   50% {
-    box-shadow: 0 0 0 0px @base01, 0 0 0 2px @base04, 0 0 0 4px @base01, 0 0 0 6px @base04;
+    box-shadow: 0 0 0 0px @base01, 0 0 0 2px @base04, 0 0 0 4px @base01, 0 0 0 6px fade(@base04, 50%);
   }
 
   100% {
@@ -134,7 +134,7 @@ svg .job.node.started .animation,
   }
 
   50% {
-    box-shadow: 0 0 0 0px @base01, 0 0 0 2px @base0A, 0 0 0 4px @base01, 0 0 0 6px @base0A;
+    box-shadow: 0 0 0 0px @base01, 0 0 0 2px @base0A, 0 0 0 4px @base01, 0 0 0 6px fade(@base0A, 50%);
   }
 
   100% {
@@ -148,7 +148,7 @@ svg .job.node.started .animation,
   }
 
   50% {
-    box-shadow: 0 0 0 0px @base01, 0 0 0 2px @base0A, 0 0 0 4px @base01, 0 0 0 6px @base0A;
+    box-shadow: 0 0 0 0px @base01, 0 0 0 2px @base0A, 0 0 0 4px @base01, 0 0 0 6px fade(@base0A, 50%);
   }
 
   100% {
