add pagination to resources page
[#99082448]

--- a/web/assets/css/modules.less
+++ b/web/assets/css/modules.less
@@ -97,3 +97,12 @@
 .children > .hook {
   margin-bottom: 0px;
 }
+
+
+.pagination-handle{
+	width: 25px;
+	text-align: center;
+	font-size: 16px;
+	display: block;
+	line-height: 25px;
+}
