--- a/web/templates/job.html
+++ b/web/templates/job.html
@@ -39,7 +39,7 @@
 							<div class="build-resources">
 								{{range .Inputs}}
 									<div class="mbs pas resource fl clearfix">
-										<div class="fl resource-name mrm">
+										<div class="resource-name mrm">
 											{{.VersionedResource.Resource}}
 										</div>
 										<div class="resource-version">
@@ -57,7 +57,7 @@
 							<div class="build-resources">
 								{{range .Outputs}}
 									<div class="mbs pas resource fl clearfix">
-										<div class="fl resource-name mrm">
+										<div class="resource-name mrm">
 											{{.VersionedResource.Resource}}
 										</div>
 										<div class="resource-version">
