add pagination to jobs builds page
[#100963130]

--- a/web/templates/job.html
+++ b/web/templates/job.html
@@ -23,6 +23,22 @@
   <div id="build-body">
     <div class="section">
       <h2>builds</h2>
+
+      {{if .PaginationData.HasPagination}}
+      <div class="pagination clearfix">
+        {{if .PaginationData.HasNewer}}
+        <div class="fl">
+          <a href="{{url "GetJob" .PipelineName .Job .PaginationData true}}" class="pagination-handle"><i class="fa fa-arrow-left"></i></a>
+        </div>
+        {{end}}
+        {{if .PaginationData.HasOlder}}
+        <div class="fr">
+          <a href="{{url "GetJob" .PipelineName .Job .PaginationData false}}" class="pagination-handle"><i class="fa fa-arrow-right"></i></a>
+        </div>
+        {{end}}
+      </div>
+      {{end}}
+
       <ul class="jobs-builds-list builds-list">
         {{$job := .Job}}
         {{$currentName := .CurrentBuild.Name}}
