add pagination handles to bottom of jobs-builds page
[#100963130]

--- a/web/assets/css/modules.less
+++ b/web/assets/css/modules.less
@@ -129,6 +129,10 @@
 	line-height: 25px;
 }
 
+.pagination-handle-flush{
+  width: auto;
+}
+
 .inputs .resource-name, .outputs .resource-name{
 	font-weight: bold;
 }
