--- a/web/assets/css/svg.less
+++ b/web/assets/css/svg.less
@@ -7,7 +7,8 @@ svg {
 
   .edge { stroke: @base03; }
   .gateway { fill: @base03; }
-  .node.job.normal rect { fill: @base03; }
+
+  .node.job.no-builds rect { fill: @base03; }
 
   .edge.pending { stroke: @base04; }
   .node.job.pending rect { fill: @base04; }
